; ModuleID = '/home/carl/AnghaBench/git/extr_config.c_git_config_from_file_with_options.c'
source_filename = "/home/carl/AnghaBench/git/extr_config.c_git_config_from_file_with_options.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config_options = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@CONFIG_ORIGIN_FILE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_config_from_file_with_options(i32 %0, i8* %1, i8* %2, %struct.config_options* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.config_options*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store %struct.config_options* %3, %struct.config_options** %8, align 8
  store i32 -1, i32* %9, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = call i32* @fopen_or_warn(i8* %11, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %12, i32** %10, align 8
  %13 = load i32*, i32** %10, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %26

15:                                               ; preds = %4
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* @CONFIG_ORIGIN_FILE, align 4
  %18 = load i8*, i8** %6, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = load i32*, i32** %10, align 8
  %21 = load i8*, i8** %7, align 8
  %22 = load %struct.config_options*, %struct.config_options** %8, align 8
  %23 = call i32 @do_config_from_file(i32 %16, i32 %17, i8* %18, i8* %19, i32* %20, i8* %21, %struct.config_options* %22)
  store i32 %23, i32* %9, align 4
  %24 = load i32*, i32** %10, align 8
  %25 = call i32 @fclose(i32* %24)
  br label %26

26:                                               ; preds = %15, %4
  %27 = load i32, i32* %9, align 4
  ret i32 %27
}

declare dso_local i32* @fopen_or_warn(i8*, i8*) #1

declare dso_local i32 @do_config_from_file(i32, i32, i8*, i8*, i32*, i8*, %struct.config_options*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
